# starlang-rs

./: .gitignore  Cargo.toml  README.md  starleaf_ebnf.txt  stdlib.sl
examples/: bad_index_using_array.sl  bad_lex_eof_in_string.sl  bad_parse_missing_curly.sl  fibonacci.sl  hello.sl  lzw.sl  lzw_bad_static_analysis.sl  primes.sl  rot13.sl
src/: ast.rs  calculator5.lalrpop  comment_stripper.rs  error.rs  file_data.rs  grammar.lalrpop  lexer.rs  main.rs  pure_exec_tree.rs  test_grammar.rs
src/exec_tree/: base.rs  error.rs  expressions.rs  main.rs  mod.rs  statements.rs  tests.rs
